# TinyDNN

./: CMakeLists.txt  README.md  main.cpp
include/: core.h  operator.h  utils.h
src/: core.cpp  operator.cpp  utils.cpp
test/: test_add.cpp  test_basic_operation.cpp  test_div.cpp  test_graphviz.cpp  test_mul.cpp  test_sub.cpp
